c4prj2_input/grade.txt
Grading at Wed Mar 10 19:58:07 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:20:7: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
     fc->deck[n].cards = realloc(fc->deck[n].cards,(index)*sizeof(*fc->deck[n].cards));
       ^
future.c:20:35: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
     fc->deck[n].cards = realloc(fc->deck[n].cards,(index)*sizeof(*fc->deck[n].cards));
                                   ^
future.c:20:69: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
     fc->deck[n].cards = realloc(fc->deck[n].cards,(index)*sizeof(*fc->deck[n].cards));
                                                                     ^
future.c:21:6: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
    fc->deck[n].cards[index] = ptr;
      ^
future.c:22:6: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
    fc->deck[n].n_cards++;
      ^
Compilation of future.c failed

Overall Grade: F
